# my_project0.10

./: CMakeCache.txt  CMakeLists.txt  GPIOHandle.cpp  GPIOHandle.h  I2C_Dummy.cpp  I2C_Dummy.h  LEDHandle.cpp  LEDHandle.h  Makefile  Outsourced.cpp  Outsourced.h  README.md  SPI_MCP23S17.cpp  SPI_MCP23S17.h  SPI_MCP3008.cpp  SPI_MCP3008.h  cmake_install.cmake  i2c8Bit.cpp  i2c8Bit.h  lm75.db  main.cpp  my_Project_0_10
